fix style and remove main scrollbar

--- a/apps/front/src/pages/Main/index.css
+++ b/apps/front/src/pages/Main/index.css
@@ -81,3 +81,7 @@
     opacity: 0%;
     z-index: -100;
 }
+
+.rc-virtual-list-holder-inner {
+    padding: 0 40px !important;
+}
